--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.5.2",
     "@vercel/postgres": "^0.10.0",
+    "lucide-react": "^0.474.0",
     "next": "^15.1.6",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
