created temarios page

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.10",
     "@supabase/ssr": "^0.5.2",
     "@vercel/postgres": "^0.10.0",
     "lucide-react": "^0.474.0",
