--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
     "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.90.1",
     "@vercel/postgres": "^0.10.0",
     "lucide-react": "^0.474.0",
     "next": "16.1.1",
