--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/postgres": "^0.10.0",
     "lucide-react": "^0.474.0",
     "next": "16.1.1",
+    "next-themes": "^0.4.6",
     "postgres": "^3.4.5",
     "react": "19.2.3",
     "react-dom": "19.2.3",
